--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,16 +11,20 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background: #0f172a;
+        background: #020617;
         margin: 0;
-        overflow: hidden;
+        overflow-x: hidden;
       }
       @keyframes float {
         0%, 100% { transform: translateY(0); }
-        50% { transform: translateY(-20px); }
+        50% { transform: translateY(-15px); }
       }
       .animate-float {
-        animation: float 6s ease-in-out infinite;
+        animation: float 5s ease-in-out infinite;
+      }
+      ::selection {
+        background: #3b82f6;
+        color: white;
       }
     </style>
     <script type="importmap">
@@ -39,5 +42,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
